--- a/src/components/main/style/Section_main6.css
+++ b/src/components/main/style/Section_main6.css
@@ -20,16 +20,21 @@
     background-size: 500%;
     animation: ani1 5s linear infinite;
 }
+.Section-main6-div1 p{
+text-align: center;
+}
 .Section-main6-Div2 h2{
     font-size: 18px;
 }
 .Section-main6-Div2{
-    height: 8cm;
+    padding-top: 50px;
+    padding-bottom: 50px;
     width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 40px;
+    flex-wrap: wrap;
 }
 .Section-main6-div2{
     display: flex;
@@ -72,4 +77,58 @@
 .Section-main6-div2 div:hover > h3{
     filter: opacity(1);
     color: white;
+}
+@media (max-width: 820px) and (min-width: 667px){
+    .Section-main6-div1 p{
+        font-size: 18px;
+        padding-left: 50px;
+        padding-right: 50px;
+        }
+}
+
+@media (max-width: 667px) and (max-height: 740px) {
+    .Section-main6-div1 p{
+        font-size: 14px;
+        padding-left: 50px;
+        padding-right: 50px;
+        }
+        .Section-main6-Div2{
+            width: 100%;
+        }
+        .Section-main6-Div2 h2{
+            font-size: 16px;
+        }
+        .Section-main6-div2 div{
+            height: 3.5cm;
+            width: 3.5cm;
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            align-items: center;
+            padding-top: 10px;
+            border-radius: 20px;
+            background-color: rgba(0, 0, 255, 0.14);
+        }
+        .Section-main6-div2 div:hover{
+            background-color: rgba(0, 85, 255, 0.212);
+            box-shadow: 1px 1px 10px 2px rgba(0, 0, 255, 0.259);
+            border: 1px solid blue;
+        }
+        .Section-main6-div2 div h3{
+            filter: opacity(0.5);
+            font-size: 16px;
+        }
+        .Section-main6-div2 div img{
+            height: 60px;
+            opacity: 0.7;
+            filter: grayscale(100%);
+            transition: 300ms;
+        }
+        
+        .Section-main6-div2 div:hover > img{
+            opacity: 1;
+            filter: grayscale(0%);
+            filter: contrast(200%);
+            height: 85px;
+        }
 }
