--- a/src/components/main/style/Section_main8.css
+++ b/src/components/main/style/Section_main8.css
@@ -7,6 +7,7 @@
     gap: 40px;
     background: #000107 ;
     color: white;
+    flex-wrap: wrap;
 }
 .form{
     width: 14cm;
@@ -156,13 +157,12 @@
 .form-div5{
     width: 80%;
     height: 4cm;
-    z-index: 2;
     display: flex;
     justify-content: center;
 }
 .form-div5 textarea{
     width: 11cm;
-    height: 95%;
+    height: 4cm;
     resize: none;
     background: #000107;
     border-radius: 5px;
@@ -215,7 +215,6 @@
 }
 .Section-main8-div2{
     width: 14cm;
-    height: 8cm;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -254,4 +253,45 @@
 }
 .S-M8-Dv2-Contact div i{
     font-size: 30px;
+}
+@media (max-width: 485px) and (max-height: 740px) {
+    .form{
+        width: 9.5cm;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .Form-div2{
+        justify-content: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+    .Form-div2 div input{
+        width: 8cm;
+    }
+    .form-div3{
+        justify-content: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+    .form-div3 div input{
+        width: 8cm;
+    }
+    .form-div5 {
+        width: 90% ;
+    }
+    .Btn-Selection button{
+
+    }
+    .form-div4 button{
+        width: 8cm;
+    }
+    .S-M8-Dv2-Contact{
+        flex-flow: column;
+    }
+    .S-M8-Dv2-Contact div{
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
