--- a/src/components/main/style/section_main.css
+++ b/src/components/main/style/section_main.css
@@ -1,9 +1,10 @@
 .Section-main{
-    height: 15cm;
     display: flex;
     align-items: center;
     justify-content: space-around;
     gap: 2cm;
+    padding-top: 100px;
+    padding-bottom: 100px;
     background: #000107;
 }
 .S-main-div1{
@@ -75,6 +76,11 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    flex-flow: wrap;
+}
+.S-main-div1-div2 div{
+    display: flex;
+    gap: 20px;
 }
 .S-main-div1-div2 i{
     width: 40px;
@@ -100,8 +106,69 @@
    border: 2px solid rgba(0, 0, 255, 0.404);
    box-shadow: 1px 1px 10px 5px rgba(0, 0, 255, 0.081);
    transition: 300ms;
+  
 }
 .S-main-div2 img:hover{
     rotate: 0deg;
     border: 3px solid blue;
+}
+#imgDev2{
+    display: none;
+}
+@media (max-width: 820px),(min-width: 667px) and (max-height: 1080px),(min-height: 740px){
+    .Section-main{
+        
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .S-main-div2 img{
+        height: 8cm;
+        border-radius: 50px;
+        rotate: 5deg;
+        border: 2px solid rgba(0, 0, 255, 0.404);
+        box-shadow: 1px 1px 10px 5px rgba(0, 0, 255, 0.081);
+        transition: 300ms;
+       
+     }
+}
+@media (max-width: 745px) {
+    .S-main-div1-div2{
+        justify-content: center;
+    }
+    .S-main-div1 h1{ 
+        font-size: 45px;
+    }
+    .S-main-div1 p{
+        font-size: 20px;
+        color: white;
+    }
+    .S-main-div2{
+        display: none;
+    }
+    
+    .Section-main{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    }
+    #imgDev2{
+        display: flex;
+        height: 7%;
+        width: 90%;
+        border-radius: 50px;
+        rotate: 5deg;
+        border: 2px solid rgba(0, 0, 255, 0.404);
+        box-shadow: 1px 1px 10px 5px rgba(0, 0, 255, 0.081);
+        transition: 300ms;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+
+    }
+    #imgDev2:hover{
+    rotate: 0deg;
+    border: 2px solid blue;
+    }
 }
