--- a/src/components/body/style/Structure.css
+++ b/src/components/body/style/Structure.css
@@ -9,6 +9,7 @@ body{
 .Section-main2{
     padding-top: 50px;
     padding-bottom: 50px;
+   gap: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -48,14 +49,25 @@ body{
 }
 @media (max-width: 485px) and (max-height: 740px) {
     .Section-main2{
+        padding-top: 20px;
+        padding-bottom: 30px;
         flex-flow: column wrap;
         justify-content: center;
         align-items: center;
     }
     .Section-main2 div{
         height: 3cm;
-        margin-right: 40px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
+    .Section-main2 div h2{
+        margin: 0; 
+        text-align: center;
+    }
+    
     
 }
 /*Diseño de la parte 1 de la section tres*/
