--- a/src/components/main/style/Section_main4.css
+++ b/src/components/main/style/Section_main4.css
@@ -198,5 +198,6 @@ padding-top: 22px;
 @media (max-width: 485px) and (max-height: 740px) {
     .Section-main4-div1 h1{
         font-size: 40px;
+        text-align: center;
     }
 }
