--- a/src/components/main/style/Section_main6.css
+++ b/src/components/main/style/Section_main6.css
@@ -94,6 +94,9 @@ text-align: center;
         padding-left: 50px;
         padding-right: 50px;
         }
+        .Section-main6-div1 h1{
+            text-align: center;
+        }
         .Section-main6-Div2{
             width: 100%;
         }
